// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`setIn 1`] = `
Object {
  "a": false,
  "d": null,
  "e": Array [
    Object {
      "f": 1,
      "g": 2,
    },
  ],
}
`;

exports[`setIn 2`] = `
Object {
  "a": Object {
    "b": Array [
      false,
      2,
      3,
    ],
    "c": true,
  },
  "d": null,
  "e": Array [
    Object {
      "f": 1,
      "g": 2,
    },
  ],
}
`;

exports[`setIn 3`] = `
Object {
  "a": Object {
    "b": Array [
      1,
      2,
      3,
    ],
    "c": true,
  },
  "d": null,
  "e": Array [
    Object {
      "f": false,
      "g": 2,
    },
  ],
}
`;
